# janus_bot

./: Dockerfile  chainlit.md  janus_bot.code-workspace  pyproject.toml  requirements.txt
app/: app1.py  start-app.sh
app/.chainlit/: config.toml
